[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/Arcade/Parts/Player_End_VS_Stats.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Pawns/Robit_Pawn-01-00-Wheel.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Robit_Pawn-01-00.png" type="Texture" id=3]
[ext_resource path="res://misc/line-text.tres" type="DynamicFont" id=4]

[node name="Player_End_VS_Stats" type="VBoxContainer"]
margin_right = 256.0
margin_bottom = 800.0
script = ExtResource( 1 )

[node name="MarginContainer0" type="MarginContainer" parent="."]
editor/display_folded = true
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 128, 256 )

[node name="Sprite2" type="Sprite" parent="MarginContainer0"]
position = Vector2( 128, 128 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
vframes = 5
hframes = 16

[node name="Sprite" type="Sprite" parent="MarginContainer0"]
position = Vector2( 128, 128 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
vframes = 5
hframes = 16

[node name="MarginContainer1" type="MarginContainer" parent="."]
margin_top = 260.0
margin_right = 256.0
margin_bottom = 275.0
size_flags_vertical = 3

[node name="HBox_Player" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 279.0
margin_right = 256.0
margin_bottom = 316.0

[node name="MarginContainer" type="MarginContainer" parent="HBox_Player"]
margin_right = 42.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBox_Player"]
margin_left = 46.0
margin_right = 186.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "Player "

[node name="MarginContainer2" type="MarginContainer" parent="HBox_Player"]
visible = false
margin_left = 174.0
margin_right = 200.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBox_Player"]
margin_left = 190.0
margin_right = 210.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="MarginContainer3" type="MarginContainer" parent="HBox_Player"]
margin_left = 214.0
margin_right = 256.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_top = 320.0
margin_right = 256.0
margin_bottom = 335.0
size_flags_vertical = 3

[node name="HBox_Score" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 339.0
margin_right = 256.0
margin_bottom = 376.0

[node name="MarginContainer2" type="MarginContainer" parent="HBox_Score"]
margin_right = 30.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBox_Score"]
margin_left = 34.0
margin_right = 162.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "score :"

[node name="MarginContainer3" type="MarginContainer" parent="HBox_Score"]
margin_left = 166.0
margin_right = 196.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBox_Score"]
margin_left = 200.0
margin_right = 220.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2

[node name="MarginContainer4" type="MarginContainer" parent="HBox_Score"]
margin_left = 224.0
margin_right = 256.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_top = 380.0
margin_right = 256.0
margin_bottom = 395.0
size_flags_vertical = 3

[node name="HBox_Kills" type="HBoxContainer" parent="."]
margin_top = 399.0
margin_right = 256.0
margin_bottom = 436.0

[node name="MarginContainer2" type="MarginContainer" parent="HBox_Kills"]
margin_right = 34.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBox_Kills"]
margin_left = 38.0
margin_right = 154.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "Kills :"

[node name="MarginContainer3" type="MarginContainer" parent="HBox_Kills"]
margin_left = 158.0
margin_right = 192.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBox_Kills"]
margin_left = 196.0
margin_right = 216.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2

[node name="MarginContainer4" type="MarginContainer" parent="HBox_Kills"]
margin_left = 220.0
margin_right = 256.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="MarginContainer4" type="MarginContainer" parent="."]
margin_top = 440.0
margin_right = 256.0
margin_bottom = 455.0
size_flags_vertical = 3

[node name="HBox_Deaths" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 459.0
margin_right = 256.0
margin_bottom = 496.0

[node name="MarginContainer2" type="MarginContainer" parent="HBox_Deaths"]
margin_right = 24.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBox_Deaths"]
margin_left = 28.0
margin_right = 176.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "Deaths :"

[node name="MarginContainer3" type="MarginContainer" parent="HBox_Deaths"]
margin_left = 180.0
margin_right = 204.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBox_Deaths"]
margin_left = 208.0
margin_right = 228.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2

[node name="MarginContainer4" type="MarginContainer" parent="HBox_Deaths"]
margin_left = 232.0
margin_right = 256.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="MarginContainer5" type="MarginContainer" parent="."]
margin_top = 500.0
margin_right = 256.0
margin_bottom = 515.0
size_flags_vertical = 3

[node name="HBox_KDR" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 519.0
margin_right = 256.0
margin_bottom = 556.0

[node name="MarginContainer2" type="MarginContainer" parent="HBox_KDR"]
margin_right = 42.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBox_KDR"]
margin_left = 46.0
margin_right = 140.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "K/D :"

[node name="MarginContainer3" type="MarginContainer" parent="HBox_KDR"]
margin_left = 144.0
margin_right = 186.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBox_KDR"]
margin_left = 190.0
margin_right = 210.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2

[node name="MarginContainer4" type="MarginContainer" parent="HBox_KDR"]
margin_left = 214.0
margin_right = 256.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="MarginContainer6" type="MarginContainer" parent="."]
margin_top = 560.0
margin_right = 256.0
margin_bottom = 575.0
size_flags_vertical = 3

[node name="HBox_Shots" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 579.0
margin_right = 256.0
margin_bottom = 616.0

[node name="MarginContainer2" type="MarginContainer" parent="HBox_Shots"]
margin_right = 30.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBox_Shots"]
margin_left = 34.0
margin_right = 162.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "Shots :"

[node name="MarginContainer3" type="MarginContainer" parent="HBox_Shots"]
margin_left = 166.0
margin_right = 196.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBox_Shots"]
margin_left = 200.0
margin_right = 220.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2

[node name="MarginContainer4" type="MarginContainer" parent="HBox_Shots"]
margin_left = 224.0
margin_right = 256.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="MarginContainer7" type="MarginContainer" parent="."]
margin_top = 620.0
margin_right = 256.0
margin_bottom = 635.0
size_flags_vertical = 3

[node name="HBox_Hits" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 639.0
margin_right = 256.0
margin_bottom = 676.0

[node name="MarginContainer2" type="MarginContainer" parent="HBox_Hits"]
margin_right = 41.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBox_Hits"]
margin_left = 45.0
margin_right = 141.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "hits :"

[node name="MarginContainer3" type="MarginContainer" parent="HBox_Hits"]
margin_left = 145.0
margin_right = 186.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBox_Hits"]
margin_left = 190.0
margin_right = 210.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2

[node name="MarginContainer4" type="MarginContainer" parent="HBox_Hits"]
margin_left = 214.0
margin_right = 256.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="MarginContainer8" type="MarginContainer" parent="."]
margin_top = 680.0
margin_right = 256.0
margin_bottom = 695.0
size_flags_vertical = 3

[node name="HBox_Miss" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 699.0
margin_right = 256.0
margin_bottom = 736.0

[node name="MarginContainer2" type="MarginContainer" parent="HBox_Miss"]
margin_right = 27.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBox_Miss"]
margin_left = 31.0
margin_right = 170.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "Misses :"

[node name="MarginContainer3" type="MarginContainer" parent="HBox_Miss"]
margin_left = 174.0
margin_right = 201.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBox_Miss"]
margin_left = 205.0
margin_right = 225.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2

[node name="MarginContainer4" type="MarginContainer" parent="HBox_Miss"]
margin_left = 229.0
margin_right = 256.0
margin_bottom = 37.0
size_flags_horizontal = 3

[node name="MarginContainer9" type="MarginContainer" parent="."]
margin_top = 740.0
margin_right = 256.0
margin_bottom = 755.0
size_flags_vertical = 3

[node name="Place_Label" type="Label" parent="."]
margin_top = 759.0
margin_right = 256.0
margin_bottom = 796.0
custom_fonts/font = ExtResource( 4 )
text = "Place"
align = 1
